--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,37 +4,89 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    name: "Linter"
+  lint-python:
+    name: Lint Python code
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repo
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install Python, pipenv and Pipfile packages
-        uses: palewire/install-python-pipenv-pipfile@v1
-        with:
-          python-version: 3.8
+      - name: Install pipenv
+        run: pipx install pipenv
 
-      - id: flake8
-        name: Flake8
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+          cache: 'pipenv'
+
+      - id: pipenv-install
+        name: Install Python dependencies
+        run: pipenv install --dev --python `which python`
+
+      - id: lint
+        name: Lint
         run: make lint
 
-  tests:
+  test-python:
     name: "Tests"
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.6, 3.7, 3.8, 3.9]
+        python: ['3.7', '3.8', '3.9', '3.10']
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v2
 
-      - name: Install Python, pipenv and Pipfile packages
-        uses: palewire/install-python-pipenv-pipfile@v1
+      - name: Install pipenv
+        run: pipx install pipenv
+
+      - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+          cache: 'pipenv'
+
+      - id: pipenv-install
+        name: Install Python dependencies
+        run: pipenv install --dev --python `which python`
 
       - id: tests
         name: Tests
         run: make test
+
+  test-build:
+    name: Build Python package
+    runs-on: ubuntu-latest
+    needs: [test-python]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install pipenv
+        run: pipx install pipenv
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+          cache: 'pipenv'
+
+      - id: pipenv-install
+        name: Install Python dependencies
+        run: pipenv install --dev --python `which python`
+
+      - id: build
+        name: Build release
+        run: |
+          pipenv run python setup.py sdist
+          pipenv run python setup.py bdist_wheel
+
+      - id: check
+        name: Check release
+        run: pipenv run twine check dist/*
+
+      - id: save
+        name: Save artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-release-${{ github.run_number }}
+          path: ./dist
+          if-no-files-found: error
