Break up scraper a touch

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -25,11 +25,24 @@ jobs:
         name: Install Python dependencies
         run: pipenv install --dev --python `which python`
 
-      - id: make
-        name: Run make command
-        run: |
-          pipenv run python setup.py install
-          make scrape
+      - id: package-install
+        name: Install package
+        run: pipenv run python setup.py install
+        shell: bash
+
+      - id: get-all
+        name: Get all events
+        run: pipenv run nwswwa all > data/all.json
+        shell: bash
+
+      - id: get-hazards
+        name: Get hazards
+        run: pipenv run nwswwa hazards > data/hazards.json
+        shell: bash
+
+      - id: get-warnings
+        name: Get warnings
+        run: pipenv run nwswwa warnings > data/warnings.json
         shell: bash
 
       - id: commit
