Update tests and try to get around a Fiona bug with the properties and circular references

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -52,7 +52,7 @@ jobs:
 
       - id: run
         name: Run
-        run: pipenv run python setup.py test
+        run: pipenv run pytest tests/test.py
         shell: bash
 
   test-build:
