--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ setuptools-scm = "*"
 sphinx = "*"
 myst-parser = "*"
 sphinx-palewire-theme = "*"
+exceptiongroup = "*"
 
 [packages]
 fiona = "*"
